<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/loginCard"
    app:cardCornerRadius="@dimen/loginCardRadius"
    android:elevation="5dp"
    android:layout_gravity="center"
    android:layout_marginTop="@dimen/loginViewsMargin"
    android:layout_marginBottom="@dimen/loginViewsMargin"
    android:background="@color/whiteCardColor">

    <LinearLayout
        style="@style/linearParent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:background="@color/grey_1"
        android:padding="@dimen/loginViewsMargin">

        <TextView
            style="@style/headerTextPrimary"
            android:layout_marginTop="@dimen/loginViewsMargin"
            android:text="@string/register_title"
            android:textColor="#FFFFFF"
            android:textSize="48sp" />

        <TextView
            style="@style/headerTextPrimary"
            android:layout_marginTop="@dimen/loginViewsMargin"
            android:layout_marginBottom="10dp"
            android:text="@string/register"
            android:textColor="#FFFFFF"
            android:textSize="24sp" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/parent"
            android:layout_marginTop="@dimen/signup_text_margin_top"
            android:textColorHint="@color/white">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/fullName"
                style="@style/modifiedEditText"
                android:backgroundTint="#FFFFFF"
                android:hint="Name"
                android:textColorHint="@color/white"
                android:inputType="text"
                android:maxLines="1"
                android:textColor="#FFFFFF"
                android:textSize="15sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/parent"
            android:layout_marginTop="@dimen/signup_text_margin_top"
            android:textColorHint="@color/white">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/phone"
                style="@style/modifiedEditText"
                android:backgroundTint="@color/white"
                android:hint="Mobile Number"
                android:textColorHint="@color/white"
                android:inputType="text"
                android:maxLines="1"
                android:textColor="#FFFFFF"
                android:textSize="15sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/parent"
            android:layout_marginTop="@dimen/signup_text_margin_top"
            android:textColorHint="@color/white">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/Email"
                style="@style/modifiedEditText"
                android:backgroundTint="#FFFFFF"
                android:hint="@string/login_email_hint"
                android:textColorHint="@color/white"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:textColor="#FFFFFF"
                android:textSize="15sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/parent"
            android:layout_marginTop="@dimen/signup_text_margin_top"
            android:textColorHint="@color/white">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password"
                style="@style/modifiedEditText"
                android:backgroundTint="#FFFFFF"
                android:hint="@string/login_password_hint"
                android:textColorHint="@color/white"
                android:inputType="textPassword"
                android:maxLines="1"
                android:textColor="#FFFFFF"
                android:textSize="15sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/registerBtn"
            style="@style/loginButton"
            android:layout_width="124dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:backgroundTint="#5E477E"
            android:text="Register"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/createText"
            style="@style/parent"
            android:layout_marginTop="@dimen/loginViewsMargin"
            android:text="@string/signup_login_hint"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="16sp"
            android:textStyle="bold" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:visibility="invisible" />

    </LinearLayout>
</androidx.cardview.widget.CardView>
