<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/loginCard"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginTop="@dimen/loginViewsMargin"
    android:layout_marginBottom="@dimen/loginViewsMargin"
    android:background="@color/grey_1"
    android:backgroundTint="@color/grey_1"
    android:elevation="5dp"
    app:cardCornerRadius="@dimen/loginCardRadius">


    <LinearLayout
        style="@style/linearParent"
        android:layout_gravity="center"
        android:background="@color/grey_1"
        android:padding="@dimen/loginViewsMargin">

        <TextView
            style="@style/headerTextPrimary"
            android:layout_marginTop="@dimen/loginViewsMargin"
            android:text="@string/register_title"
            android:textColor="@color/white"
            android:textAllCaps="true"
            android:textSize="48sp" />

        <TextView
            style="@style/headerTextPrimary"
            android:layout_marginTop="@dimen/loginViewsMargin"
            android:text="Login"
            android:textColor="@color/white"
            android:textAllCaps="true"
            android:textSize="24sp" />

        <androidx.cardview.widget.CardView
            android:id="@+id/textInputEmail"
            style="@style/parent"
            android:layout_marginTop="@dimen/loginViewsMargin">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/Email"
                style="@style/modifiedEditText"
                android:backgroundTint="#000"
                android:hint="@string/login_email_hint"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:textColorHint="@color/grey_1"
                android:textSize="20sp" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/textInputPassword"
            style="@style/parent"
            android:layout_marginTop="@dimen/loginLayoutMargin">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password"
                style="@style/modifiedEditText"
                android:backgroundTint="#000"
                android:hint="@string/login_password_hint"
                android:inputType="textPassword"
                android:maxLines="1"
                android:textColorHint="@color/grey_1"
                android:textSize="20sp" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/forgotPassword"
            style="@style/viewParent"
            android:layout_gravity="end"
            android:layout_marginTop="10dp"
            android:text="Forgot Password?"
            android:textColor="@color/white"
            android:textSize="14dp" />

        <Button
            android:id="@+id/loginBtn"
            style="@style/loginButton"
            android:layout_width="143dp"
            android:layout_height="44dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/loginViewsMargin"
            android:background="@color/colorPrimary"
            android:text="Login"
            android:textSize="16dp" />

        <TextView
            android:id="@+id/createText"
            style="@style/parent"
            android:layout_marginTop="@dimen/loginViewsMargin"
            android:onClick="viewRegisterClicked"
            android:text="@string/login_signup_hint"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:visibility="invisible" />


    </LinearLayout>
</androidx.cardview.widget.CardView>
